feat: add ticket-generator

--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
     <div class="form-container">
         <div class="input-container">
             <label>km da percorrere</label>
-            <input id="user-name" type="number">
+            <input id="user-km" type="number">
         </div>
 
         <div class="input-container">
             <label>Età</label>
-            <input id="user-lastname" type="number">
+            <input id="user-age" type="number">
         </div>
 
         <button id="generate-button">Genera il biglietto</button>
         <button id="clear-button">Annulla</button>
     </div>
     <!--messaggio sul costo del biglietto-->
-    <div class="user-message">
+    <div class="message">
     </div>
 
 
